AC_INIT(d_main.c)
AC_CONFIG_HEADER(config.h:config.hin)

dnl check for cc

AC_PROG_CC

dnl check for libraries

AC_CHECK_LIB(X11, main)
AC_CHECK_LIB(Xext, main)
AC_CHECK_LIB(aa, main)

dnl work out system type

AC_CANONICAL_SYSTEM

dnl check for i386 asm

use_i386_asm=n
case "$target" in 
	i?86-*) use_i386_asm="yes"
esac
AC_ARG_ENABLE(i386-asm,[  --disable-i386-asm      Do not use i386 assembly], use_i386_asm="no")
echo "checking whether to use x86 asm versions of some functions..."
echo $use_i386_asm

AC_SUBST(asmobjs)

if test "$use_i386_asm" = "yes"; then
        AC_DEFINE(I386ASM)
	asmobjs="drawcol.o drawspan.o"
else
	asmobjs=""
fi

AC_CYGWIN
AC_SUBST(platform)
AC_SUBST(platobjs)

dnl check for cygwin
dnl if this is cygwin, add the windows libraries
dnl otherwise, assume linux

if test "$CYGWIN" = yes; then

	AC_CHECK_LIB(gdi32, main)
	AC_CHECK_LIB(ddraw, main)
	AC_CHECK_LIB(dsound, main)

	platform=cygwin
	platobjs="v_win32.o"
else

	AC_CHECK_LIB(vga, main)

	platform=linux
	platobjs="v_svga.o"
fi

dnl check for TCP/IP support

AC_CHECK_HEADER(netinet/ip.h, AC_DEFINE(TCPIP))

AC_OUTPUT(Makefile)
