AC_INIT(d_main.c)
AC_CONFIG_HEADER(config.h:config.hin)

dnl check for cc

AC_PROG_CC

dnl libraries:

AC_HAVE_LIBRARY(aa)

dnl windows libraries:

AC_HAVE_LIBRARY(gdi32)
AC_HAVE_LIBRARY(ddraw)
AC_HAVE_LIBRARY(dsound)

dnl linux libraries

AC_HAVE_LIBRARY(vga)

dnl check for X
dnl create X_CFLAGS and X_LIBS

AC_PATH_X

if test "$x_libraries" = ""; then

else
        X_CFLAGS=-I$x_includes
        X_LIBS=-L$x_libraries
fi

AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)

AC_HAVE_LIBRARY(X11, , , $X_LIBS)
AC_CHECK_LIB(Xext, XShmAttach, AC_DEFINE(USE_XSHM), , $X_LIBS)

dnl work out system type

AC_CANONICAL_SYSTEM

dnl check for i386 asm

use_i386_asm=n
case "$target" in 
	i?86-*) use_i386_asm="yes"
esac
AC_ARG_ENABLE(i386-asm,[  --disable-i386-asm      Do not use i386 assembly], use_i386_asm="no")
echo "checking whether to use x86 asm versions of some functions..."
echo $use_i386_asm

AC_SUBST(asmobjs)

if test "$use_i386_asm" = "yes"; then
        AC_DEFINE(I386ASM)
	asmobjs="drawcol.o drawspan.o"
else
	asmobjs=""
fi

dnl check for cygwin
dnl if this is cygwin, add the windows libraries
dnl otherwise, assume linux

AC_CYGWIN
AC_SUBST(platform)
AC_SUBST(platobjs)

if test "$CYGWIN" = yes; then
	platform=cygwin
	platobjs="v_win32.o"
else
	platform=linux
	platobjs="v_svga.o"
fi

dnl check for TCP/IP support

AC_CHECK_HEADER(netinet/ip.h, AC_DEFINE(TCPIP))

AC_OUTPUT(Makefile)
